--- a/pom.xml
+++ b/pom.xml
@@ -52,10 +52,46 @@
 
   <build>
     <plugins>
+
+      <!-- Spring Boot plugin (already present) -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
+
+      <!-- ===================================== -->
+      <!-- 1) JaCoCo Plugin (Code Coverage)       -->
+      <!-- ===================================== -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.10</version>
+        <executions>
+          <execution>
+            <id>prepare-agent</id>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>test</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- ===================================== -->
+      <!-- 2) Sonar Scanner Plugin               -->
+      <!-- ===================================== -->
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.9.1.2184</version>
+      </plugin>
+
     </plugins>
   </build>
 
